<resources>
    <string name="app_name">TestApp</string>
    <string name="title_activity_maps">Map</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="main">Main</string>
    <string name="map">Map</string>
    <string name="profile">Profile</string>
    <string name="back">back</string>
    <string name="nickname">Nickname %s</string>
    <string name="birthday">Birthday %s</string>
    <string name="height">Height %s cm</string>
    <string name="weight">Weight %s kg</string>
    <string name="tips">Tips：</string>
    <string name="complete">Complete</string>
</resources>
